# Cortex-Cruiser-DIT639

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  LICENSE.md  README.md  code-of-conduct.md
.gitlab/issue_templates/: issue_template.md
.gitlab/merge_request_templates/: merge_template.md
cpp-opencv/: CMakeLists.txt  Dockerfile
cpp-opencv/common/: CMakeLists.txt
cpp-opencv/common/src/: steering.cpp
cpp-opencv/dataclean/: vibecleaner.py
cpp-opencv/dataclean/cleaned-data/: merged_output144821.csv
cpp-opencv/main/: CMakeLists.txt  Dockerfile
cpp-opencv/main/src/: istrue.hpp  test-template.cpp
cpp-opencv/performance/: CMakeLists.txt  Dockerfile  clean-data.py  cleaned_data.csv  combine.sh  compare-steering.py  computed_output.csv  computed_output_prev.csv  percentage.py  plot_script.gnuplot  run_performance_test.sh
cpp-opencv/performance/csv/: video 1.csv  video 2.csv  video 3.csv  video 4.csv  video 5.csv
cpp-opencv/performance/recordings/: CID-140-recording-2020-03-18_144821-selection-selection.rec
cpp-opencv/performance/src/: cluon-complete-v0.0.127.hpp  experimental.cpp  istrue.cpp  performance.cpp  steering.hpp
cpp-opencv/src/: compare-steering.py  experimental.cpp  istrue.cpp  template-opencv.cpp  template-opencv.hpp  test-template.cpp
cpp-opencv/src/other_decoder/: CMakeLists.txt  Dockerfile  README.md  experimental.cpp
llm-logs/llm-logs-03-29/: log-gpt-03-29.md
llm-logs/llm-logs-03-29/llm-logs-04-03/: log-gpt-04-03.md
llm-logs/llm-logs-04-08/: log-gpt-04-08-a8-eriknis.md
llm-logs/llm-logs-04-09/: log-ollama-04-09-a9-eriknis.md
old/: CMakeLists.txt
src/: CMakeLists.txt  Dockerfile  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld.cpp
